--- a/2022/Day12/Solution/Solution.csproj
+++ b/2022/Day12/Solution/Solution.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>Solution</AssemblyName>
     <RootNamespace>Solution</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
